# cc-deep-reasearch

./: .coverage  .env  .gitignore  .impeccable.md  .ralphrc  AGENT.md  CHANGELOG.md  CLAUDE.md  DESIGN_SYSTEM_EXTRACTION_PLAN.md  README.md  chinese-green-tea.md  codebase-map.html  package-lock.json  pipeline_context_failed.json  pyproject.toml  scripting.md  whitetea.md
.claude/: settings.json
.github/workflows/: dashboard-ci.yml  preflight.yml
.ralph/: .loop_start_sha  AGENT.md  PROMPT.md  fix_plan.md  progress.json
.ralph/specs/: cli-interface.md  deep-research-core.md  deep-research-features.md
dashboard/: README.md  eslint.config.js  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
dashboard/playwright-report/: index.html
dashboard/scripts/: dev.mjs  start.mjs
dashboard/test-results/: .last-run.json
data/: .gitignore
docs/: AGENT_LEVEL_LLM_ROUTING_PLAN.md  CONTENT_GEN_IMPROVEMENT_PLAN.md  DASHBOARD_GUIDE.md  EXAMPLES.md  IMPROVEMENT_PLAN.md  PR7_FIX_PLAN.md  PREFLIGHT.md  README.md  REALTIME_MONITORING.md  REFACTOR_REGRESSION_CHECKLIST.md  RELEASING.md  REPORT_SYNTHESIS_IMPROVEMENT_PLAN.md  RESEARCH_WORKFLOW.md  RESEARCH_WORKFLOW_AGENT_INTERACTIONS.md  RESEARCH_WORKFLOW_IMPROVEMENTS.md  TELEMETRY.md  USAGE.md  ai_tasks.md  beats.md  benchmark_corpus.json  brief-management.md  content-gen-artifact.md  content-gen-backlog.md  content-gen-workflow-template.md  content-generation.md  improve-strategy-guide.md  opportunity-radar-prd.md  script-from-beat-structure-prompts.md  scripting-pipeline-schemas.md  scripting.md  select-beat-structure-prompts.md  type-errors-by-file.md  type-safety-refactoring-plan.md
docs/AI_TASKS/: 001_metadata_contract.md  002_phase_result_types.md  003_orchestrator_contract_tests.md  004_no_team_flag_semantics.md  005_query_intent_classification.md  006_query_family_expansion.md  007_source_provenance_tracking.md  008_provider_expansion_or_multi_strategy.md  009_claim_evidence_model.md  010_validator_failure_modes.md  011_architecture_honesty_cleanup.md  012_report_evidence_annotations.md  013_benchmark_corpus.md  014_benchmark_harness.md  015_observability_and_stop_reasons.md  016_local_runtime_boundary_completion.md  017_local_scaffolding_api_cleanup.md  018_pdf_section_wrappers.md  019_pdf_section_typography.md  020_executive_summary_density_cleanup.md  021_sources_summary_and_catalog_split.md  022_appendix_deemphasis_and_pagination.md  023_pdf_readability_regression_tests.md  024_report_summary_contract_consolidation.md  025_executive_summary_insight_only_rewrite.md  026_writer_editor_report_pass.md  027_executive_summary_quality_guardrails.md  028_harness_report_regeneration.md  029_html_first_pdf_pipeline.md  030_live_monitor_event_contract.md  031_phase_agent_and_tool_instrumentation.md  032_stream_claude_cli_subprocess_events.md  033_live_session_store_and_dashboard_queries.md  034_operator_dashboard_live_console.md  035_monitoring_cli_docs_and_end_to_end_validation.md  036_llm_route_contract_and_config.md  037_session_llm_route_registry.md  038_claude_cli_transport_adapter.md  039_openrouter_llm_adapter.md  040_cerebras_llm_adapter.md  (+11 more)
docs/phases/: phase-01-strategy-and-constraints.md  phase-02-opportunity-and-idea-scoring.md  phase-03-research-and-argument.md  phase-04-draft-and-packaging.md  phase-05-visual-and-production-brief.md  phase-06-qc-and-publish.md  phase-07-performance-and-rule-updates.md
docs/radar/: operator-playbook.md
docs/refactor/: README.md
docs/review/: 2026-04-11-resume-context-followup.md  2026-04-11-scan-log.md
docs/roadmap/: opportunity-radar-roadmap.md  strategy-upgrade-roadmap.md
docs/scripts/: auto_fix_phase1.py
docs/tasks/: 01-dashboard-shadcn-foundation-primitives.md  01-dashboard-visual-foundation.md  01-stage-panel-foundation.md  02-dashboard-shadcn-form-primitives.md  02-home-control-room.md  02-ideation-stage-details.md  03-dashboard-shadcn-start-research-form.md  03-scripting-trace-integration.md  03-session-workspace-shell.md  04-dashboard-shadcn-home-and-session-list.md  04-downstream-stage-details.md  04-session-overview-panel.md  05-dashboard-shadcn-settings-forms.md  05-live-pipeline-context-updates.md  05-session-monitor-and-report-panels.md  06-dashboard-shadcn-settings-status-panels.md  06-operator-insights-and-guidance.md  06-stage-trace-enrichment.md  07-dashboard-shadcn-session-workspace-shell.md  07-launch-flow-presets-and-templates.md  07-tests-and-docs.md  08-dashboard-shadcn-session-filters-and-table.md  08-session-history-triage-and-compare.md  09-dashboard-shadcn-content-studio-shell.md  09-regression-tests-and-doc-refresh.md  10-dashboard-shadcn-content-studio-forms.md  10-settings-runtime-clarity.md  11-dashboard-shadcn-content-studio-data-panels.md  11-search-cache-operations.md  12-dashboard-shadcn-testing-and-rollout.md  12-saved-filters-and-views.md  (+81 more)
scripts/: bump_version.py  dashboard-dev  dashboard-start  preflight
tests/: __init__.py  test_analyzer.py  test_backlog_chat_service.py  test_benchmark.py  test_cli_monitoring.py  test_cli_research.py  test_config.py  test_content_gen.py  test_content_gen_backlog_chat.py  test_content_gen_brief_api_service.py  test_content_gen_briefs.py  test_content_gen_contracts.py  test_content_gen_fixtures.py  test_content_gen_lane_state.py  test_content_gen_lifecycle.py  test_content_gen_pipeline_boundary.py  test_content_gen_pipeline_gates.py  test_content_gen_storage_migration.py  test_coordination_imports.py  test_credibility.py  test_dashboard_content_gen_types.py  test_iterative_loop.py  test_key_rotation.py  test_knowledge_benchmark_gates.py  test_knowledge_cli.py  test_knowledge_ingest.py  test_knowledge_planning.py  test_knowledge_vault.py  test_llm_analysis_client.py  test_llm_anthropic.py  test_llm_cerebras.py  test_llm_openrouter.py  test_llm_registry.py  test_llm_route_planner.py  test_llm_router.py  test_markdown_to_pdf.py  test_models.py  test_monitoring.py  test_operating_fitness.py  test_orchestration.py  (+33 more)
(+848 files in other folders)
