[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "duckdb>=1.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "pandas>=2.1.0",
    "streamlit>=1.38.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",
]

[project]
name = "cc-deep-research"
dynamic = ["version"]
description = "Deep research platform with real-time dashboard monitoring"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "CC Deep Research Team" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyYAML>=6.0.0",
    "WeasyPrint>=60.0",
    "markdown>=3.5.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "feedparser>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",
]
dashboard = [
    "duckdb>=1.1.0",
    "pandas>=2.1.0",
    "streamlit>=1.38.0",
]

[project.urls]
Homepage = "https://github.com/example/cc-deep-research"
Documentation = "https://github.com/example/cc-deep-research#readme"
Repository = "https://github.com/example/cc-deep-research"

[tool.hatch.version]
path = "src/cc_deep_research/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_deep_research"]

[project.scripts]
cc-deep-research = "cc_deep_research.cli.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top (pre-existing)
    "B008",   # do not perform function calls in argument defaults
    "ARG002", # unused function arguments (pre-existing, many interfaces require these)
    "ARG001", # unused function arguments (pre-existing)
    "ARG005", # unused lambda arguments (pre-existing)
    "SIM102", # nested if statements (pre-existing)
    "SIM103", # redundant condition directly returned (pre-existing)
    "SIM105", # try-except-pass (pre-existing, sometimes intentional)
    "SIM108", # ternary operator suggestion (pre-existing)
    "SIM118", # key in dict.keys() suggestion (pre-existing)
    "B007",   # loop control variable not used (pre-existing)
    "B015",   # pointless comparison (pre-existing)
    "W291",   # trailing whitespace (pre-existing)
    "F841",   # unused local variables (pre-existing)
    "F811",   # redefinition of unused (pre-existing)
]

[tool.ruff.lint.isort]
known-first-party = ["cc_deep_research"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
disallow_any_generics = false
ignore_errors = true  # global default for legacy code

# Enable strict mypy for core refactored service/orchestration modules (Phase 01-06).
# Excludes content_gen pipeline/stages/agents/ (model contract mismatches, separate task).
# Excludes models/ and prompts/ (deep model contracts, will be addressed separately).
[[tool.mypy.overrides]]
module = "cc_deep_research.orchestration.*"
ignore_errors = false

[[tool.mypy.overrides]]
module = "cc_deep_research.web_server"
ignore_errors = false

[[tool.mypy.overrides]]
module = "cc_deep_research.web_server_routes.*"
ignore_errors = false

[[tool.mypy.overrides]]
module = "cc_deep_research.research_runs.*"
ignore_errors = false

[[tool.mypy.overrides]]
module = "cc_deep_research.telemetry.*"
ignore_errors = false

[[tool.mypy.overrides]]
module = "cc_deep_research.monitoring"
ignore_errors = false

[[tool.mypy.overrides]]
module = "cc_deep_research.aggregation"
ignore_errors = false

[[tool.mypy.overrides]]
module = "cc_deep_research.text_normalization"
ignore_errors = false

[[tool.mypy.overrides]]
module = "cc_deep_research.session_store"
ignore_errors = false

[[tool.mypy.overrides]]
module = "cc_deep_research.post_validator"
ignore_errors = false

[[tool.mypy.overrides]]
module = "cc_deep_research.knowledge.*"
ignore_errors = false

[[tool.mypy.overrides]]
module = "cc_deep_research.cli.*"
ignore_errors = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.coverage.run]
source = ["src/cc_deep_research"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
